<resources>
    <string name="app_name">Dawid Testowa apliakcja</string>
    <string name="przycisk1">Uruchom jakis program</string>
    <string name="przycisk2">To jest drugi przycisk</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="string">Liczby</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logowanie">logowanie</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="camera">kamerka</string>
    <string name="zapisz">zapisz plik</string>
    <string name="wyswietl">Wyswietl pliki</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="tupojawisietekxt">Tu sie cos pojawi</string>
    <string name="odliczanie">Odliczanie</string>
    <string name="buttonStartCount">Zacznij odliczanie</string>
    <string name="hind_podpowiedz">Wpisz tutaj tytuł powiadomienia</string>
    <string name="hind_powiadomienie">Tresc powiadomienia</string>
</resources>
