<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dhonkisz.myapplication.CountDownActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hind_podpowiedz"
        android:ems="10"
        android:inputType="textPersonName"

        tools:ignore="MissingConstraints"/>


    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hind_powiadomienie"
        tools:ignore="MissingConstraints"/>


    <Button
        android:id="@+id/btnStartCount"
        android:layout_width="375dp"
        android:layout_height="90dp"
        android:onClick="zacznijOdliczanie"
        android:text="@string/buttonStartCount"/>




    <EditText
        android:id="@+id/editTextSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="5"
        android:inputType="number"/>



</LinearLayout>