<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.dhonkisz.myapplication.MainActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/przycisk1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="klikniecie"
            android:text="@string/przycisk1" />

        <Button
        android:id="@+id/przycisk2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="klikniecie"
        android:layout_alignLeft="@+id/przycisk1"
        android:layout_alignStart="@+id/przycisk1"
        android:layout_below="@+id/przycisk1"
        android:text="@string/przycisk2" />

        <Button
            android:id="@+id/logowanie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="klikniecie"
            android:layout_alignLeft="@+id/przycisk2"
            android:layout_alignStart="@+id/przycisk2"
            android:layout_below="@+id/przycisk2"
            android:text="@string/logowanie" />

        <Button
            android:id="@+id/zapisz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="zapisz"
            android:layout_alignLeft="@+id/logowanie"
            android:layout_alignStart="@+id/logowanie"
            android:layout_below="@+id/logowanie"
            android:text="@string/logowanie" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
